fixed some broken ui

--- a/src/Pages/Auth/auth.scss
+++ b/src/Pages/Auth/auth.scss
@@ -1,6 +1,6 @@
 .Auth{
     &_container {
-        max-width: 1000px;
+        max-width: 800px;
         transform: translate(-50%, 0);
         margin-left: 50%;
         width: 94%;
@@ -15,7 +15,7 @@
 
     @media (min-width: 800px) {
         &_container {
-            margin-top: 70px;
+            margin-top: 50px;
         }
       }
   
